--- a/src/styles/biblioteca-online3.css
+++ b/src/styles/biblioteca-online3.css
@@ -93,15 +93,15 @@ h2{
 }
 .carreras img{
     width: 100%;
-    height: 20vh;
-    margin:0;
+    height: 100%;
+    margin: auto;
     border-radius: 10px;
     object-fit: cover;
     box-shadow: 0 0 40px 1px rgba(38, 72, 223,30%);
 }
 .nombreCarreras{
     font-family:Cambria;
-    margin: 0;
+    margin:0;
     padding: 5px;
     color: rgb(66, 65, 65);
     text-align: center;
