--- a/src/styles/biblioteca-online3.css
+++ b/src/styles/biblioteca-online3.css
@@ -5,6 +5,7 @@
     border-top-width: 1px;
     border-top-style:dotted;
     border-top-color: rgb(255, 255, 255);
+    margin-top: 50px;
 }
 .submain2 img{
     width: 150px;
