--- a/src/styles/biblioteca-online1.css
+++ b/src/styles/biblioteca-online1.css
@@ -1,5 +1,5 @@
 body{
-    margin: 0;
+    margin: 0 auto;
     font-family: sans-serif;
 }
 .posEnca{
@@ -13,12 +13,12 @@ body{
     justify-content:space-between;
     width: 100%;
     height: 50px;
-    max-height: 50px;
-    min-height: 45px;
+    min-height: 40px;
     font-weight: 600;
     font-size: 15px;
     position: fixed;
     top: 0;
+    margin: 0 auto;
 }
 #sharepoint:hover{
     color: rgb(38, 72, 223);
@@ -35,15 +35,13 @@ body{
 }
 .posImg{
     vertical-align: middle;
-    width: 20px;
+    width: 1vw;
     min-width: 15px;
-    height: 20px;
+    height: 2vh;
     min-height: 15px;
     margin: 0 15px;;
 }
 .enca1{
-    width: 200px;
-    min-width: 180px;
     height: 100%;
     max-height: 100%;
 }
